# web3-rs

./: .gitignore  Cargo.toml
crates/ether/: Cargo.toml
crates/ether/src/: example.rs  lib.rs  renzo.rs
crates/ether/src/abi/: aave.rs  aave_pool.rs  argus.rs  erc20.rs  mod.rs  multicall.rs  rseth.rs  univ2.rs  univ3.rs  wsteth.rs
crates/ether/src/argus/: mod.rs
crates/ether/src/mev/: flashbot.rs  mod.rs
crates/ether/src/signer/: keystore.rs  mnemonic.rs  mod.rs  private_key.rs
crates/ether/src/simulator/: argus.rs  evm.rs  mod.rs
docs/: aave_mev_mempool_flow.md
examples/: cobosafe_fork_e2e.rs  cobosafe_submit.rs  direct_transfer.rs  flashbots_bundle.rs  fork_simulate.rs  safe_tx_deploy_json.rs
skill/: SKILL.md
skill/docs/: architecture.md
skill/scripts/: ensure_tools.sh  fetch_web3rs_sha.sh  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh  start_local_signer.sh
skill/templates/: README.md.template
skill/templates/contracts/: foundry.toml.template
skill/templates/contracts/src/: ACL.sol.template
skill/templates/contracts/test/: ACL.t.sol.template
skill/templates/rust/: Cargo.toml.template
skill/templates/rust/src/: lib.rs.template
skill/templates/rust/tests/: deploy_fork_verify.rs.template  phase1_safe_direct.rs.template  phase2_full_chain.rs.template  phase3_rule_chain.rs.template
skill/templates/signer/: config.yaml.template  rule.js.template
src/: lib.rs
src/app/: mod.rs
src/builder/: cobosafe.rs  direct.rs  mod.rs
src/sender/: flashbots.rs  mod.rs  private.rs  rpc.rs
src/signer/: local.rs  mod.rs  remote.rs
src/simulator/: assertions.rs  decoder.rs  display.rs  erc20.rs  fork.rs  mod.rs
src/utils/: cobosafe.rs  decimal.rs  erc20.rs  foundry.rs  mod.rs  safe_tx_builder.rs  signer_json.rs  testing.rs
(+1 files in other folders)
