[package]
name = "ether-lrs"
version = "0.1.0"
edition = "2021"


[dependencies]
eyre = "0.6.12"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8.12"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structured-logger = "1.0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
futures = { version = "0.3.27" }
tokio = { version = "1.28", features = [
    "rt-multi-thread",
    "macros",
] }

foundry-evm = {git = "https://github.com/foundry-rs/foundry", version = "*"}
foundry-common = {git = "https://github.com/foundry-rs/foundry", version = "*"}
revm = {version = "*", features = ["serde-json", "alloydb", "dev","serde"]}
revm-inspectors ={ version = "*"}
revm-trace = "2.0.0"
alloy = {version = "*", features = ["full"]}
